--- a/index.html
+++ b/index.html
@@ -4,8 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <!--Nav-Bar-->
+    <header class="principal">
+        <div class="pessoal">
+            <img src="imagem/FE7C9CE1-A850-4734-89FB-AD471C482CCF.jpg" alt="Sua Foto" class="profile-pic">
+            <h1>Itallo Otavio</h1>
+        </div>
+    </header>
+    <!--Sobre-->
+    <div class="sobre">
+    <h2>Sobre</h2>
+    <p>Gostaria de me apresentar como um entusiasta da tecnologia e um estudante dedicado no campo de Análise e Desenvolvimento de Sistemas.
+        Estou comprometido com o aprendizado contínuo e sempre busco oportunidades para me desafiar e crescer profissionalmente. Tenho um olhar atento aos detalhes, sou organizado e tenho habilidades de trabalho em equipe, que acredito serem essenciais para o sucesso no campo de desenvolvimento de sistemas.
+        Se houver uma oportunidade de estagiário ou qualquer outra forma de contribuição, ficaria honrado em fazer parte do time.</p>
+    </div>
+    <!--Tecnologias-->
+    <div class="Tec">
+    <h2>Tecnologias</h2>
+    <img width="48" height="48" src="https://img.icons8.com/color/48/html-5--v1.png" alt="html-5--v1"/>
+    <img width="48" height="48" src="https://img.icons8.com/color/48/css3.png" alt="css3"/>
+    <img width="48" height="48" src="https://img.icons8.com/color/48/bootstrap--v2.png" alt="bootstrap--v2"/>
+    <img width="48" height="48" src="https://img.icons8.com/color/48/javascript--v1.png" alt="javascript--v1"/>
+    <img width="48" height="48" src="https://img.icons8.com/fluency/48/c-sharp-logo.png" alt="c-sharp-logo"/>
+    </div>
+    <!--Projetos-->
+    <div class="projetos">
+        <h2>Meus Projetos</h2>
+        <div class="projetos-container">
+            <a href="link-para-o-projeto1" class="projeto">
+                <img src="imagem-do-projeto1.jpg" alt="Descrição do Projeto 1">
+                <div class="projeto-info">
+                    <h3>Lar Animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore perspiciatis voluptatem optio sequi. Provident quisquam soluta sint suscipit culpa sequi optio voluptas inventore? Id, velit deleniti. Animi enim quia id.</p>
+                </div>
+            </a>
+            <a href="link-para-o-projeto2" class="projeto">
+                <img src="imagem-do-projeto2.jpg" alt="Descrição do Projeto 2">
+                <div class="projeto-info">
+                    <h3>PucFlix</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatem non saepe itaque cupiditate aliquam illum quasi error fuga a rerum commodi, corrupti perferendis. Perferendis qui velit quisquam ducimus quae!</p>
+                </div>
+            </a>
+            <a href="link-para-o-projeto3" class="projeto">
+                <img src="imagem-do-projeto3.jpg" alt="Descrição do Projeto 3">
+                <div class="projeto-info">
+                    <h3>ProgIors</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis adipisci quaerat quisquam magnam tenetur, harum non accusamus facilis, quos sequi dolore quis similique officiis exercitationem dignissimos ullam atque unde repellendus?</p>
+                </div>
+            </a>
+            <a href="link-para-o-projeto4" class="projeto">
+                <img src="imagem-do-projeto4.jpg" alt="Descrição do Projeto 4">
+                <div class="projeto-info">
+                    <h3>Em Breve</h3>
+                    <p>Projeto em andamento</p>
+                </div>
+            </a>
+            <a href="link-para-o-projeto5" class="projeto">
+                <img src="imagem-do-projeto5.jpg" alt="Descrição do Projeto 5">
+                <div class="projeto-info">
+                    <h3>Em Breve</h3>
+                    <p>Projeto em andamento</p>
+                </div>
+            </a>
+            <a href="link-para-o-projeto6" class="projeto">
+                <img src="imagem-do-projeto6.jpg" alt="Descrição do Projeto 6">
+                <div class="projeto-info">
+                    <h3>Em Breve</h3>
+                    <p>Projeto em andamento</p>
+                </div>
+            </a>
+        </div>
+    </div>
+      
+    <!--Contato-->
+    <div class="contato">
+        <h2>Contato</h2>
+        <form action="seu-endereco-de-email-ou-processador-de-formulario" method="post">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Seu Nome" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Seu E-mail" required>
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" name="mensagem" placeholder="Sua Mensagem" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+    <footer>
+        <h1>Linkedin, git hub</h1>
+    </footer>
 </body>
 </html>
