--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="pessoal">
             <img src="imagem/FE7C9CE1-A850-4734-89FB-AD471C482CCF.jpg" alt="Sua Foto" class="profile-pic">
             <h1>Itallo Otavio</h1>
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/circled-down-2.png" alt="circled-down-2"/>
         </div>
     </header>
     <!--Sobre-->
@@ -36,43 +37,46 @@
     <div class="projetos">
         <h2>Meus Projetos</h2>
         <div class="projetos-container">
-            <a href="link-para-o-projeto1" class="projeto">
-                <img src="imagem-do-projeto1.jpg" alt="Descrição do Projeto 1">
+            <a href="https://github.com/ICEI-PUC-Minas-PCO-SI/pco-ads-2023-2-p1-tiaw-t2-LarAnimal" class="projeto">
+                <img src="imagem/Lar animal.png" alt="Descrição do Projeto 1">
                 <div class="projeto-info">
                     <h3>Lar Animal</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore perspiciatis voluptatem optio sequi. Provident quisquam soluta sint suscipit culpa sequi optio voluptas inventore? Id, velit deleniti. Animi enim quia id.</p>
+                    <h6>Trabalho Acadêmico</h6>
+                    <p>O "Lar Animal" é uma plataforma web desenvolvida para conectar ONGs, grupos de proteção animal, voluntários e tutores que desejam resgatar, cuidar e adotar animais vulneráveis. A aplicação facilita o acesso a informações e serviços essenciais, promovendo uma rede de apoio eficiente para o bem-estar dos animais.</p>
                 </div>
             </a>
-            <a href="link-para-o-projeto2" class="projeto">
-                <img src="imagem-do-projeto2.jpg" alt="Descrição do Projeto 2">
+            <a href="https://github.com/ICEI-PUC-Minas-PCO-ADS-TI/2024-2-p3-tidai-pucflix" class="projeto">
+                <img src="imagem/Puc flix.png" alt="Descrição do Projeto 2">
                 <div class="projeto-info">
                     <h3>PucFlix</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus voluptatem non saepe itaque cupiditate aliquam illum quasi error fuga a rerum commodi, corrupti perferendis. Perferendis qui velit quisquam ducimus quae!</p>
+                    <h6>Trabalho Acadêmico</h6>
+                    <p>O "PUCFLIX" é uma aplicação web para streaming de vídeo, oferecendo uma experiência de consumo de filmes e séries acessível e intuitiva. A plataforma proporciona acesso a uma vasta biblioteca de conteúdo, seguindo as melhores práticas e tendências de mercado.</p>
                 </div>
             </a>
-            <a href="link-para-o-projeto3" class="projeto">
-                <img src="imagem-do-projeto3.jpg" alt="Descrição do Projeto 3">
+            <a href="https://github.com/ItalloOtavio/progiors" class="projeto">
+                <img src="imagem/ProgIors.png" alt="Descrição do Projeto 3">
                 <div class="projeto-info">
                     <h3>ProgIors</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis adipisci quaerat quisquam magnam tenetur, harum non accusamus facilis, quos sequi dolore quis similique officiis exercitationem dignissimos ullam atque unde repellendus?</p>
+                    <h6>Projeto Pessoal</h6>
+                    <p>O ProgIors é uma aplicação inovadora inspirada no Duolingo, voltada para o aprendizado interativo de linguagens de programação. Assim como o Duolingo, o ProgIors utiliza uma abordagem gamificada para oferecer uma plataforma divertida e eficaz para aspirantes a desenvolvedores.</p>
                 </div>
             </a>
             <a href="link-para-o-projeto4" class="projeto">
-                <img src="imagem-do-projeto4.jpg" alt="Descrição do Projeto 4">
+                <img src="imagem-do-projeto4.jpg" alt="...">
                 <div class="projeto-info">
                     <h3>Em Breve</h3>
                     <p>Projeto em andamento</p>
                 </div>
             </a>
             <a href="link-para-o-projeto5" class="projeto">
-                <img src="imagem-do-projeto5.jpg" alt="Descrição do Projeto 5">
+                <img src="imagem-do-projeto5.jpg" alt="...">
                 <div class="projeto-info">
                     <h3>Em Breve</h3>
                     <p>Projeto em andamento</p>
                 </div>
             </a>
             <a href="link-para-o-projeto6" class="projeto">
-                <img src="imagem-do-projeto6.jpg" alt="Descrição do Projeto 6">
+                <img src="imagem-do-projeto6.jpg" alt="...">
                 <div class="projeto-info">
                     <h3>Em Breve</h3>
                     <p>Projeto em andamento</p>
@@ -84,7 +88,7 @@
     <!--Contato-->
     <div class="contato">
         <h2>Contato</h2>
-        <form action="seu-endereco-de-email-ou-processador-de-formulario" method="post">
+        <form action="https://formspree.io/f/myzgakkv" method="POST">
             <label for="nome">Nome</label>
             <input type="text" id="nome" name="nome" placeholder="Seu Nome" required>
             <label for="email">Email</label>
@@ -94,8 +98,11 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
-    <footer>
-        <h1>Linkedin, git hub</h1>
+    <footer class="rodape">
+        <h1><a href="https://www.linkedin.com/in/itallootavio/" target="_blank" rel="noopener noreferrer">
+            <img width="48" height="48" src="https://img.icons8.com/color/48/linkedin.png" alt="linkedin"/></a> 
+            <a href="https://github.com/ItalloOtavio" target="_blank" rel="noopener noreferrer">
+            <img width="30" height="30" src="https://img.icons8.com/ios-glyphs/30/github.png" alt="github"/></a></h1>
     </footer>
 </body>
 </html>
